# puredeck

./: CLAUDE.md  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: adr.md  glossary.md  learnings.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: google_auth.rs  lib.rs  main.rs
src/app/: providers.tsx  suppress-native-context-menu.ts
src/components/: command-palette.tsx  demo-form.tsx  (+1 more)
tests/: apply-theme-vars.test.ts  bootstrap.test.tsx  card-grid.test.tsx  collection-remove.test.ts  collection-seed.test.ts  collection-store.test.ts  command-palette.test.tsx  deck-ops.test.ts  deck-view.test.tsx  delete-deck-dialog.test.tsx  fsrs.test.ts  google-auth-fake.test.ts  google-drive-section.test.tsx  layout-shell.test.tsx  mobile-shell.test.tsx  palette-deck-crud.test.tsx  panel-resize.test.ts  pureui-tailwind-source.test.ts  record-hotkey.test.ts  review-store.test.ts  revlog-store.test.ts  save-toast.test.tsx  scheduler.test.ts  settings-collection-path.test.tsx  settings-google-account.test.ts  settings-keymap.test.ts  settings-store.test.ts  settings-theme-colors.test.ts  settings-view.test.tsx  setup.ts  shell-router.test.tsx  shortcut-mutators.test.tsx  shortcut-rebinding.test.tsx  shortcuts-resolve.test.ts  shortcuts-save-action.test.ts  sidebar-deck-crud.test.tsx  storage-section.test.tsx  study-queue.test.ts  study-view.test.tsx  suppress-native-context-menu.test.ts  (+15 more)
(+90 files in other folders)
