[package]
name = "puredeck"
version = "0.1.0"
description = "puredeck - a keyboard-driven, file-based desktop flashcards app"
authors = ["Piotr Zieliński"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "puredeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.2"
tauri-plugin-persisted-scope = "2.3.7"
tauri-plugin-oauth = "2.1.0"
tauri-plugin-deep-link = "2.4.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
